@@ -1,3 +1,8 @@
+2004-06-29 Mikhail Khodjaiants
+	Temporary fix for bug 68915: Invalid values in the Variables view.
+	* CStackFrame.java
+	* CThread.java
+
 2004-06-28 Mikhail Khodjaiants
 	Partial fix for bug 45535: Performance problems when debugging.
 	Cache the double and float presentations of the floating point types.
